# CC-usage

./: .gitignore  README.md  index.html  package.json  설치 안내.txt
.github/workflows/: build-test.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-claude.rgba
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  auth_store.rs  mod.rs  oauth.rs  usage.rs
src/components/: AuthModal.tsx  LogoutButton.tsx  UsageDashboard.tsx
src/lib/: api.ts
