[package]
name = "cc-usage"
version = "0.1.0"
description = "CC-usage - Claude Code Usage Monitor"
authors = ["zollicoff"]
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
