[package]
name = "cc-usage"
version = "1.5.0"
description = "CC-usage - Claude Code Usage Monitor"
authors = ["zollicoff"]
license = "AGPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
parking_lot = "0.12"
regex = "1"
once_cell = "1"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tracing = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
